# mockcpp

./: CMakeLists.txt  README.md
include/mockcpp/: mockcpp.h
src/: CMakeLists.txt
